# WeiDU_Log_Builder

./: .gitignore  CREDITS.md  README.md  pyproject.toml  run_checks.bat
config/: compat_rules.yaml
src/wlb/: main.py
src/wlb/app/: composition_root.py  main.py
src/wlb/domain/: models.py
src/wlb/infra/export/: weidu_log_writer.py
src/wlb/infra/fs/: local_fs.py  readme_finder.py  windows_version.py
src/wlb/infra/install/: subprocess_installer.py  terminal_installer.py
src/wlb/infra/process/: subprocess_runner.py
src/wlb/infra/scan/: tp2_meta.py
src/wlb/infra/weidu/: weidu_components.py
src/wlb/ports/: fs_port.py  install_port.py  process_port.py  weidu_port.py
src/wlb/services/: export_service.py  install_request_builder.py  install_service.py  scan_service.py  settings_service.py
src/wlb/ui/: wizard_window.py
src/wlb/ui/step1/: setup_page.py  setup_section_builders.py  setup_sections.py  setup_settings.py
src/wlb/ui/step1/controllers/: settings.py
src/wlb/ui/step1/views/: section_builders.py  section_types.py  sections.py
src/wlb/ui/step2/: compat_rules.py  compat_rules_types.py  readme_lookup.py  select_apply.py  select_binding.py  select_compat.py  select_compat_deps.py  select_compat_files.py  select_compat_game.py  select_compat_parse.py  select_compat_types.py  select_filter.py  select_item_state.py  select_layout.py  select_missing.py  select_models.py  select_page.py  select_scan.py  select_scan_worker.py  select_search.py  select_widgets.py  selection_store.py
src/wlb/ui/step2/bindings/: __init__.py  details_panel.py  mods_apply_models.py  mods_apply_versions.py  order_list.py  order_tracker.py  select_apply.py  select_binding.py  view_proxy.py
src/wlb/ui/step2/compat/: __init__.py  compat_eval.py  compat_files_scan.py  compat_parse_tokens.py  compat_rules.py  compat_rules_loader.py  compat_rules_match.py  compat_rules_matchers.py  compat_rules_version.py  select_compat.py  select_compat_deps.py  select_compat_files.py  select_compat_map.py  select_compat_parse.py  (+4 more)
src/wlb/ui/step3/: order_page.py
src/wlb/ui/step4/: review_page.py  review_viewmodel.py
src/wlb/ui/step5/: install_page.py
src/wlb/ui/style/: app.qss  metrics.py
src/wlb/ui/widgets/: __init__.py  page_scaffold.py  path_picker.py
(+92 files in other folders)
